<resources>
    <string name="app_name">Pharmacy</string>
    <string name="addmoree">Add more</string>
    <string name="otp">One time password (OTP) has been sent to Your Mail id\nPlease enter the same
                here to reset your password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="next">Next</string>
    <string name="start">GOT IT</string>
    <string name="upload_your_precription">Upload your Precription</string>
    <string name="just_simple_click_to_upload">Just simple click to upload</string>
    <string name="order_your_otc_products">Order your OTC products</string>
    <string name="signup">SignUp</string>
    <string name="log_in_hre">Log-In here</string>
    <string name="name">Name</string>
    <string name="allready_have_an_account">Allready have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register_now"><u>Register Now</u></string>
    <string name="log_in">Log-In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="back_to_login"><u>Back To Login</u></string>
    <string name="back_to_home"><u>Back To Home</u></string>
    <string name="please_enter_your_mail_id_to_recover_your_password">please enter your Mail Id to recover your password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="submit">Submit</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_products">My Products</string>
    <string name="my_prescriptions">My Prescriptions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="upload_prescription_one">Upload \nPrescription</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_your_prescription_hre">Upload your prescription hre</string>
    <string name="what_is_a_valid_prescription">What is a valid prescription?</string>
    <string name="shipping">Add shipping Address</string>
    <string name="fullname">Enter Full Name</string>
    <string name="name11"> Full Name :</string>
    <string name="street">Enter Street Name</string>
    <string name="street1"> Street Name :</string>
    <string name="city">Enter City Name</string>
    <string name="city1"> City Name :</string>
    <string name="zipcode">Enter Zip Code</string>
    <string name="zipcode1"> Zip Code :</string>
    <string name="state">Enter State</string>
    <string name="state1"> State Name :</string>
    <string name="email11">Enter Email</string>
    <string name="email1"> Email :</string>
    <string name="phone">Enter Phone Number</string>
    <string name="logout">LogOut</string>
    <string name="changelanguage">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="selectedlanguage">Language Select</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pending">Pending</string>
    <string name="confirm1">Confirm</string>
    <string name="readytoshift">Ready to shift</string>
    <string name="cancelledbyyou">Cancelled by you</string>
    <string name="rejectedbypharmacy">Rejected by pharmacy</string>
    <string name="readytodispatch">Ready to dispatch</string>
    <string name="dispatched">dispatched</string>
    <string name="intransit">in transit</string>
    <string name="indore">Indore</string>
    <string name="deliver_to">Deliver To</string>
    <string name="pharmacy">PHARMACY</string>
    <string name="buy_otc_product">Buy OTC Product</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="view_all">View All</string>
    <string name="home">Home</string>
    <string name="prescription">Prescription</string>
    <string name="medicine">Medicine</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="upload_a_picture_of_your_prescription">Upload a picture of your prescription</string>
    <string name="get_a_confirmation">Get a confirmation</string>
    <string name="make_payment">Make payment</string>
    <string name="placeorder">Place Order</string>
    <string name="cancel">Cancel Order</string>
    <string name="remove">Remove </string>
    <string name="valid_prescription_guide">Valid Prescription Guide</string>
    <string name="upload_clear_image">Upload Clear Image</string>
    <string name="doctor_detailse_required">Doctor Detailse Required</string>
    <string name="date_of_presiscription">Date of Presiscription</string>
    <string name="patient_detail">Patient Details</string>
    <string name="dosage_details">Dosage Details</string>
    <string name="how_it_works">How it Works</string>
    <string name="received_notification">Received \nNotification</string>
    <string name="medicine_at_your_doorstep">Medicine at your doorstep</string>
    <string name="product">Product</string>
    <string name="physiotherapy_rehabiutation">PHYSIOTHERAPY/REHABIUTATION</string>
    <string name="_200">₹ 200</string>
    <string name="_100">₹ 100</string>
    <string name="how_to_order_medicines_on_doktoreoman_it_s_simple">How to order medicines on DoktoreOman? it\'s simple.</string>
    <string name="chuck_taylor_all_star_leather">Chuck Taylor All Star Leather</string>
    <string name="the_converse_chuck_taylore_all_star_leather_sneaker_add_a_rich_n_textured_leather_upper_onto_the_world_s_most_iconic_hight">The Converse Chuck taylore All star leather sneaker add a rich, \n textured leather upper onto the world\'s most iconicncsadiwqjdwd fjdjwdidsmw vwjidwiudwsdixW\njgifejfejifjdfqjidfjhfjifewdjfwsdwsffvsjfefnsefjnefj\nfgsdfgdufkhsdfasdjasdfilaes hight..</string>
    <string name="total_ammount">Total \nAmmount</string>
    <string name="search">search</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="my_order">My Order</string>
    <string name="prescription_uploaded_successfully">Prescription Uploaded Successfully!</string>
    <string name="cannotadd">Cannot Add product of different pharmacy.Do You Want To Remove All The Other Products And Add This To Cart ?</string>
    <string name="success_your_order_has_been_requested_successfully_please_track_the_status_in_my_prescription">Success ! Your order has been requested successfully. Please track the status in MY PRESCRIPTION</string>
    <string name="ok">OK</string>
    <string name="order_id">Order ID:</string>
    <string name="_25_08_2021">25/08/2021</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="otc_product">OTC Product</string>
    <string name="medicine_category">Medicine Category</string>
    <string name="email_valid">Email Must consist of 4 to 30 characters</string>
    <string name="email_valid_two">Only . and @ characters allowed</string>
    <string name="email_valid_three">Email must contain @ and .</string>
    <string name="pass_valid">Password Must consist of 4 to 20 characters</string>
    <string name="name_please">Please enter your name</string>
    <string name="enter_mobile">please enter valid mobile no</string>
    <string name="enter_pass">Enter Password</string>
    <string name="register_success">Resigster successfuly</string>
    <string name="atulya_pharmacy">Atulya Pharmacy</string>
    <string name="search_location">Search Location</string>
    <string name="use_current_location">Use current Location</string>
    <string name="recent_location">Recent location</string>
    <string name="my_cart">My Cart</string>
    <string name="_141_rating_amp_564_review"><![CDATA[141 Rating & 564 Review]]></string>
    <string name="sale_price">Sale Price</string>
    <string name="Manish">Manish</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="update_profile">Update Profile</string>
    <string name="order_history">Order History</string>
    <string name="change_password">Change Password</string>
    <string name="add_new_address">Add New Address</string>
    <string name="delivery_time_and_date">Delivery Time and Date</string>
    <string name="_12_15pm">12:15pm</string>
    <string name="jan_09_2022">jan 09,2022</string>
    <string name="product_name">Product Name</string>
    <string name="atulya_it_park_indore">Atulya it park , Indore</string>
    <string name="pin_code">Pin Code</string>
    <string name="address">Address</string>
    <string name="contact_no">Contact No.</string>
    <string name="contactus">Contact Us.</string>
    <string name="need_help">Need Help</string>
    <string name="pharmacy_address">Pharmacy address</string>
    <string name="pharmacy_name">Pharmacy name</string>
    <string name="ordered_on">ORDERED ON</string>
    <string name="items">ITEMS</string>
    <string name="_1_x_paracetamole_2_x_zandubam">1 x Paracetamole, 2 x Zandubam</string>
    <string name="repeat_order">Repeat Order</string>
    <string name="place_order">Place Order</string>
    <string name="proceed">Proceed</string>
    <string name="delivered">Delivered</string>
    <string name="delivered_to">Delivered To</string>
    <string name="item_total">Item Total</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="re_order">Re-Order</string>
    <string name="upload_your_prescription">Upload your Prescription</string>
    <string name="selected_category_name">Selected Category name</string>
    <string name="select_pharmacy">Select Pharmacy</string>
    <string name="select_product">Select Product</string>
    <string name="show_address">Show Address List</string>
    <string name="save">Save </string>
    <string name="debit">Debit Card </string>
    <string name="cod">Cash On Delivery </string>
    <string name="choose">Choose Payment Method </string>
    <string name="apply">Apply Coupon </string>
    <string name="add_address">Add Address </string>
    <string name="addresslist">AddressList </string>
    <string name="read_more">Read more...</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="wish_list">Wish-List</string>
    <string name="quantity">Quantity</string>
    <string name="sort">Sort BY</string>
    <string name="disease_category">Disease Category</string>
    <string name="using_gallery">Using Gallery</string>
    <string name="picture_selector">Select Picture</string>
    <string name="using_camera">Using Camera</string>
    <string name="order_place">Order Placed Successfully!</string>
    <string name="search_by">Sort By</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert">Alert</string>
    <string name="check_internet">Server Not Response! check your internet connection...</string>
</resources>