<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_med_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_medicine"
        android:icon="@drawable/bottom_medicine"
        android:title="@string/otc_product" />

    <item
        android:id="@+id/navigation_prescription"
        android:icon="@drawable/bottom_prescription"
        android:title="@string/prescription" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/bottom_notification"
        android:title="@string/notification"
                                      />
    <item
        android:id="@+id/navigation__my_cart"
        android:icon="@drawable/ic_shopping_bag"

        android:title="@string/my_cart" />


</menu>